--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,13 @@
     "import sys\n",
     "!pip3 install -r twint/requirements.txt\n",
     "!pip3 install twint\n",
-    "!pip3 install nest-asyncio"
+    "!pip3 install nest-asyncio\n",
+    "!pip3 install nltk\n",
+    "\n",
+    "# Install NLTK library and run the following to download NLTK-required content\n",
+    "import nltk\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('punkt')"
    ]
   },
   {
@@ -39,15 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import twint\n",
     "import csv\n",
     "import pandas as pd\n",
+    "import string\n",
+    "import re\n",
     "import nest_asyncio\n",
     "nest_asyncio.apply()\n",
+    "file_dir = './data.csv'\n",
     "tweets = []"
    ]
   },
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +88,6 @@
     }
    ],
    "source": [
-    "file_dir = './data.csv'\n",
     "c = twint.Config()                  \n",
     "c.Store_csv = True                      # Store as CSV\n",
     "c.Output = (file_dir)                   # Output file directory\n",
@@ -111,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,30 +136,73 @@
     "\n",
     "Here, we apply the following measures:\n",
     "- Stop-word removal\n",
-    "- Lemmatisation\n",
-    "- Truncation\n",
-    "- Spelling Mistakes\n",
-    "- Slang"
+    "- Stemming\n",
+    "- Spelling Mistakes (TODO)\n",
+    "- Slang             (TODO)\n",
+    "\n",
+    "Some other info on Tweet Cleaning:\n",
+    "https://www.kaggle.com/ragnisah/text-data-cleaning-tweets-analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "Wow, thank you — on my way!! https://twitter.com/teamtrump/status/1230581311464787968 …\n"
+    },
+    {
+     "data": {
+      "text/plain": "['Wow', 'thank', 'way']"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import preprocessor as p\n",
+    "import pandas as pd\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "ps = PorterStemmer()\n",
+    "\n",
+    "# TODO  Keep some punctuation\n",
+    "#       Re-Define Stopwords\n",
+    "def clean_text(text):                                                               # Line-by-line, this code:\n",
+    "    text = re.sub(r'\\w+:\\/{2}[\\d\\w-]+(\\.[\\d\\w-]+)*(?:(?:\\/[^\\s/]*))*', '', text)    #   - Removes URLs\n",
+    "    text = re.sub(r'[^\\w\\s]', '', text)                                             #   - Removes Punctuation\n",
+    "    text = text.replace(u'\\xa0', u' ')                                              #   - Removes Break lines\n",
+    "    text = text.split(' ')                                                          #   - Splits up text by Whitespace\n",
+    "    text = [word for word in text if word not in stop_words]                        #   - Removes Stop-Words\n",
+    "    text = [ps.stem(word) for word in text]                                         #   - Stems words\n",
+    "    return list(filter(lambda a: a != '', text))                                    #   - Removes white space\n",
+    "\n",
+    "test_tweet = tweets[30]\n",
+    "\n",
+    "print(test_tweet)\n",
+    "clean_text(test_tweet)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def clean_text(text):\n",
-    "    pass\n",
-    "\n",
-    "cleaned_tweets = []"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37464bitf11fe8824d0244f597f4f929b637ffe8",
+   "name": "python37432bitce969f5da8f14d9f835b5f3d0cab7102",
    "language": "python",
-   "display_name": "Python 3.7.4 64-bit"
+   "display_name": "Python 3.7.4 32-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -163,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.7.3-final"
   },
   "pycharm": {
    "stem_cell": {
