--- a/main.ipynb
+++ b/main.ipynb
@@ -23,8 +23,29 @@
     "!pip3 install -r twint/requirements.txt\n",
     "!pip3 install twint\n",
     "!pip3 install nest-asyncio\n",
-    "!pip3 install nltk\n",
-    "\n",
+    "!pip3 install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": "[nltk_data] Downloading package stopwords to\n[nltk_data]     /Users/neilmizzi/nltk_data...\n[nltk_data]   Package stopwords is already up-to-date!\n[nltk_data] Downloading package punkt to /Users/neilmizzi/nltk_data...\n[nltk_data]   Package punkt is already up-to-date!\n"
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Install NLTK library and run the following to download NLTK-required content\n",
     "import nltk\n",
     "nltk.download('stopwords')\n",
@@ -45,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +76,7 @@
     "import string\n",
     "import re\n",
     "import nest_asyncio\n",
-    "nest_asyncio.apply()\n",
-    "file_dir = './data.csv'\n",
-    "tweets = []"
+    "nest_asyncio.apply()"
    ]
   },
   {
@@ -78,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -88,15 +107,18 @@
     }
    ],
    "source": [
+    "file_dir = './data.csv'\n",
     "c = twint.Config()                  \n",
     "c.Store_csv = True                      # Store as CSV\n",
     "c.Output = (file_dir)                   # Output file directory\n",
     "c.Limit = 100                           # No. of Tweet Limit\n",
     "c.Hide_output = True                    # Hide Output\n",
+    "c.Pandas = True\n",
     "c.Username = 'realdonaldtrump'          # Username to look up\n",
     "\n",
     "\n",
     "twint.run.Search(c)\n",
+    "tweets = twint.storage.panda.Tweets_df\n",
     "print(\"Search Done. Output in \"+ file_dir)\n"
    ]
   },
@@ -119,13 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "695    Mini Mike Bloomberg’s debate performance tonig...\n696    Thank you Arizona! With your help, your devoti...\n697    “What has happened to Roger Stone should never...\n698                           pic.twitter.com/1XnhyX8jb2\n699    The Democrat party is the party of high taxes,...\nName: tweet, dtype: object"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Add Fields as necessary\n",
     "data = pd.read_csv(file_dir)[[\"tweet\", \"mentions\", \"hashtags\"]]\n",
-    "tweets = data['tweet']"
+    "tweets = data['tweet']\n",
+    "tweets.iloc()"
    ]
   },
   {
@@ -141,12 +173,14 @@
     "- Slang             (TODO)\n",
     "\n",
     "Some other info on Tweet Cleaning:\n",
-    "https://www.kaggle.com/ragnisah/text-data-cleaning-tweets-analysis"
+    "\n",
+    "https://www.kaggle.com/ragnisah/text-data-cleaning-tweets-analysis\n",
+    "https://kite.com/python/docs/nltk.TweetTokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -156,9 +190,9 @@
     },
     {
      "data": {
-      "text/plain": "['Wow', 'thank', 'way']"
+      "text/plain": "['wow', 'thank', 'way']"
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,6 +226,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'be'"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps.stem('being')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -200,9 +252,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python37432bitce969f5da8f14d9f835b5f3d0cab7102",
+   "name": "python37464bitf11fe8824d0244f597f4f929b637ffe8",
    "language": "python",
-   "display_name": "Python 3.7.4 32-bit"
+   "display_name": "Python 3.7.4 64-bit"
   },
   "language_info": {
    "codemirror_mode": {
@@ -214,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3-final"
+   "version": "3.7.4-final"
   },
   "pycharm": {
    "stem_cell": {
